--- a/redditface/build.gradle
+++ b/redditface/build.gradle
@@ -23,5 +23,6 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:support-v4:18.0.0'
+    compile files('libs/okhttp-1.5.4.jar')
 }
