Add API and AuthActivity for reddit logins

--- a/redditface/src/main/AndroidManifest.xml
+++ b/redditface/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.sverma.redditface.ItemListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +31,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ItemListActivity" />
         </activity>
+        <activity
+            android:name="com.sverma.redditface.AuthActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
